--- a/modules/Users/view/profile.phtml
+++ b/modules/Users/view/profile.phtml
@@ -1,55 +1,50 @@
 
 
 <h3 class="page-header">
-    {{ __('Profile') }}
+    {{ user.name }}
     {% if( is_vk_user == 1) %}
 
     {% else %}
-        {% if (view_user.id == user.id) %}
-            {{ ahref(__('Change email'), ['users', 'change-email'], {"class" : "btn btn-mini pull-right"}) }}
+    {# if (view_user.id == user.id) %}
+    {{ ahref(__('Change email'), ['users', 'change-email'], {"class" : "btn btn-mini pull-right"}) }}
             {{ ahref(__('Change password'), ['users', 'change-password'], {"class" : "btn btn-mini pull-righ"} ) }}
-        {% endif %}
+    {% endif #}
     {% endif %}
 
 
 </h3>
 
-<dl class="dl-horizontal">
-    <dt>{{ __('Login') }}</dt>
-    <dd>{{ user.login }}</dd>
-    <dt>{{ __('Email') }}</dt>
-    <dd><a href="mailto:{{ user.email }}">{{ user.email }}</a></dd>
-    <dt>{{ __('Status') }}</dt>
-    <dd>{{ user.status }}</dd>
-</dl>
-
-
-
-
-
-
+<form id="{{ form_id }}" class="ajax" method="PUT" action="users/crud">
+    <input type="hidden" name="id" value="{{ user.id }}">
+    <input type="hidden" name="login" value="{{ user.login }}">
+    <input type="hidden" name="email" value="{{ user.email }}">
+    <dl class="dl-horizontal">
+        <dt>{{ __('Логин') }}</dt>
+        <dd>{{ user.login }}</dd>
+        <dt>{{ __('Электропочта') }}</dt>
+        <dd><a href="mailto:{{ user.email }}">{{ user.email }}</a></dd>
+        <!--dt>{{ __('Status') }}</dt>
+        <dd>{{ user.status }}</dd-->
+        <dt>Имя</dt>
+        <dd><input class="form-control" type="text" value="{{ user.name }}" name="name"/></dd>
+        <dt>Телефон</dt>
+        <dd><input class="form-control" type="tel" value="{{ user.phone }}" name="phone"/></dd>
+        <dt>Адрес доставки</dt>
+        <dd><textarea class="form-control" name="delivery_address_1"> {{ user.delivery_address_1 }} </textarea></dd>
+    </dl>
+    <div class="input-group pull-right">
+        <button class="btn btn-primary" type="submit">Сохранить</button>
+    </div>
+</form>
 
 {#
-<?php
-    /**
-     * @var \Application\Users\Row $user
-     * @var \Bluz\View\View $this
-     */
-?>
-
-<h3 class="page-header">
-    <?=__('Profile')?>
-    <?php if ($this->user()->id == $user->id) : ?>
-        <?=$this->ahref(__('Change email'), ['users', 'change-email'], ['class'=>'btn btn-mini pull-right'])?>
-        <?=$this->ahref(__('Change password'), ['users', 'change-password'], ['class'=>'btn btn-mini pull-right'])?>
-    <?php endif; ?>
-</h3>
-<dl class="dl-horizontal">
-    <dt><?=__('Login')?></dt>
-    <dd><?=$user->login?></dd>
-    <dt><?=__('Email')?></dt>
-    <dd><a href="mailto:<?=$user->email?>"><?=$user->email?></a></dd>
-    <dt><?=__('Status')?></dt>
-    <dd><?=$user->status?></dd>
-</dl>
+<div class="input-group pull-right">
+    <a class="btn btn-primary dialog" data-ajax-method="put" href="users/crud">Сохранить</a>
+</div>
 #}
+
+
+
+
+
+
