--- a/modules/My/view/Base.phtml
+++ b/modules/My/view/Base.phtml
@@ -1,16 +1,11 @@
-<table class="zebra-striped">
-    <thead>
-        <tr>
-            <th>Здесь будет текст</th>
-            <th>
-                <img src="public/images/island_2.png" class="" />
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>3</td>
-            <td>4</td>
-        </tr>
-    </tbody>
-</table>
+<h4>Уважаемый Пользователь!</h4>
+<p>Благодарим за регистрацию на нашем сайте!</p>
+<p>Мы рады предложить пилотную версию проекта <strong>Кексик.укр</strong>. </p>
+<p>Оплата продуктов производится через кредитный счет либо наличными. <br>
+    Для пополнения кредитного счёта нужно:<br>
+    - пополнить карту Приватбанка <strong>5363-5423-0371-6840</strong> (Чернов Артем Александрович);<br>
+    - отправить СМС на наш номер, в котором указана сумма и Ваше имя на сайте.<br>
+    Имя можно опустить, если в персональных данных Вы сохранили номер Вашего телефона.
+</p>
+<br>
+<p>Желаем приятных покупок!</p>
