Users grid relative path

--- a/Core/View/layouts/partial/twig_content.phtml
+++ b/Core/View/layouts/partial/twig_content.phtml
@@ -1,63 +1,68 @@
+<div id="content">
+    <div class="content-text">
 
-
-
-  <div id="content">
-                <div class="content-text">
-
-                    <div class="wrapper">
-                        <div class="jcarousel-wrapper">
-                            <div class="jcarousel">
-                                <ul>
-                                    <li><img src="{{ baseUrl("public/images/napitki.png") }}" alt="Image 0"></li>
-                                    <li><img src="{{ baseUrl("public/images/fruits.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/drinks_n_water.png") }}" alt="Image 2"></li>
-                                    <li><img src="{{ baseUrl("public/images/sugar.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/cold.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/gigiena_sl.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/milk_sl.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/grocery_sl.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/stationary_sl.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/chemistry.png") }}" alt="Image 1"></li>
-                                    <li><img src="{{ baseUrl("public/images/eggs.png") }}" alt="Image 1"></li>
-                                </ul>
-                            </div>
-
-                            <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
-                            <a href="#" class="jcarousel-control-next">&rsaquo;</a>
-
-                            <p class="jcarousel-pagination"></p>
-                        </div>
-                    </div>
-
-
-
-                    <div class="slider">
-                        <div><a href="" title="напитки"><img src="public/images/напитки.png" /></a></div>
-                        <div><a href=""  title="фрукты"><img src="public/images/фрукты.png" /></a></div>
-                        <div><a href="" title="сладости"><img src="public/images/сладости.png" /></a></div>
-                        <div><a href="" title="гигиена"><img src="public/images/гигиена.png" /></a></div>
-                        <div><a href="" title="бытовая химия"><img src="public/images/бытовая%20химия.png" /></a></div>
-                        <div><a href="" title="бакалея"><img src="public/images/бакалея.png" /></a></div>
-                        <div><a href="" title="молочка"><img src="public/images/молочка.png" /></a></div>
-                        <div><a href="" title="заморозка"><img src="public/images/заморозка.png" /></a></div>
-                        <div><a href="" title="масло, яйца"><img src="public/images/масло%20и%20яйца.png" /></a></div>
-                        <div><a href="" title="канцтовары"><img src="public/images/канцтовары.png" /></a></div>
-                        <div><a href="" title="соки, вода"><img src="public/images/соки%20и%20вода.png" /></a></div>
-                        <a href="#" class="next">&#9654;</a>
-                        <a href="#" class="prev">&#9664;</a>
-                    </div><!-- slider -->
-
-                    <ul class="text">
-                        <li>Доставка:</li>
-                        <li><img src="public/images/bullet.png">Заказы, оформленные до 12.00, доставляются в тот же день с 13.00 до 18.00.
-                        Заказы, оформленные после 12.00, доставляются на следующий день.</li>
-                        <li><img src="public/images/bullet.png">Доставка по г.Харькову осуществляется БЕСПЛАТНО при заказе от 300грн.
-                        Заказ до 300грн, включает доставку по Харькову в сумме 30грн.</li>
-                        <li><img src="public/images/bullet.png">Стоимость доставки за пределы г.Харькова - 8грн./км.</li>
-                        <li><img src="public/images/bullet.png">Экспресс-доставка. В любое удобное для Вас время по предварительной договоренности.
-                        Стоимость 30грн.</li>
+        <div class="wrapper">
+            <div class="jcarousel-wrapper">
+                <div class="jcarousel">
+                    <ul>
+                        <li><img src="{{ baseUrl(" public/images/napitki.png") }}" alt="Image 0"></li>
+                        <li><img src="{{ baseUrl(" public/images/fruits.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/drinks_n_water.png") }}" alt="Image 2"></li>
+                        <li><img src="{{ baseUrl(" public/images/sugar.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/cold.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/gigiena_sl.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/milk_sl.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/grocery_sl.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/stationary_sl.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/chemistry.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl(" public/images/eggs.png") }}" alt="Image 1"></li>
                     </ul>
-
-
                 </div>
+
+                <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+
+                <p class="jcarousel-pagination"></p>
             </div>
+        </div>
+
+
+        {#
+        <div class="slider">
+            <div><a href="" title="напитки"><img src="public/images/напитки.png"/></a></div>
+            <div><a href="" title="фрукты"><img src="public/images/фрукты.png"/></a></div>
+            <div><a href="" title="сладости"><img src="public/images/сладости.png"/></a></div>
+            <div><a href="" title="гигиена"><img src="public/images/гигиена.png"/></a></div>
+            <div><a href="" title="бытовая химия"><img src="public/images/бытовая%20химия.png"/></a></div>
+            <div><a href="" title="бакалея"><img src="public/images/бакалея.png"/></a></div>
+            <div><a href="" title="молочка"><img src="public/images/молочка.png"/></a></div>
+            <div><a href="" title="заморозка"><img src="public/images/заморозка.png"/></a></div>
+            <div><a href="" title="масло, яйца"><img src="public/images/масло%20и%20яйца.png"/></a></div>
+            <div><a href="" title="канцтовары"><img src="public/images/канцтовары.png"/></a></div>
+            <div><a href="" title="соки, вода"><img src="public/images/соки%20и%20вода.png"/></a></div>
+            <a href="#" class="next">&#9654;</a>
+            <a href="#" class="prev">&#9664;</a>
+        </div>
+        <!-- slider -->
+        #}
+
+        <ul class="text">
+            <li>Доставка:</li>
+            <li><img src="public/images/bullet.png">Заказы, оформленные до 12.00, доставляются в тот же день с 13.00 до
+                18.00.
+                Заказы, оформленные после 12.00, доставляются на следующий день.
+            </li>
+            <li><img src="public/images/bullet.png">Доставка по г.Харькову осуществляется БЕСПЛАТНО при заказе от
+                300грн.
+                Заказ до 300грн, включает доставку по Харькову в сумме 30грн.
+            </li>
+            <li><img src="public/images/bullet.png">Стоимость доставки за пределы г.Харькова - 8грн./км.</li>
+            <li><img src="public/images/bullet.png">Экспресс-доставка. В любое удобное для Вас время по предварительной
+                договоренности.
+                Стоимость 30грн.
+            </li>
+        </ul>
+
+
+    </div>
+</div>
