--- a/Core/View/layouts/partial/grid/filter-search.phtml
+++ b/Core/View/layouts/partial/grid/filter-search.phtml
@@ -5,7 +5,7 @@
     {% endfor %}
     #}
 
- <form class="filter-form" action="{{ grid.getUrl({'a':1}) }}"> {# grid.getUrl({'a':1}) #}
+ <form class="filter-form" action="{{ grid.url() }}"> {# grid.getUrl({'a':1}) #}
      <div class="input-group-btn grid-filter-search _one-line">
          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ default_filter.title }} <span class="caret"></span></button>
          <ul class="dropdown-menu">
