--- a/modules/Orders/view/grid-products.phtml
+++ b/modules/Orders/view/grid-products.phtml
@@ -3,9 +3,10 @@
 </script>
 
 
-<div class="clearfix" data-spy="grid" data-grid="{{ gid }}-{{ attribute(grid_products, 'getUid')  }}" data-url="{{ grid_products.getUrl({'orders_id' : orders_id, 'gid': gid}) }}/gid/{{gid}}">
+<div class="clearfix" data-spy="grid" data-grid="{{ gid }}-{{ attribute(grid_products, 'getUid')  }}"
+     data-url="{{ grid_products.getUrl({'orders_id' : orders_id}) }}/gid/{{gid}}">
 
-<form class="filter-form" action="{{ baseUrl('/orders/grid-products') }}/gid/{{ gid }}">
+    <form class="filter-form" action="{{ grid_products.getUrl({'orders_id' : orders_id}) }}/gid/{{ gid }}">
     <div class="input-group-btn grid-filter-search">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Наименование <span class="caret"></span></button>
         <ul class="dropdown-menu">
