Исправил появившийся пробел из-за Code-Reformat, который выполняется автоматически при коммитах

--- a/Core/View/layouts/partial/twig_content.phtml
+++ b/Core/View/layouts/partial/twig_content.phtml
@@ -5,17 +5,17 @@
             <div class="jcarousel-wrapper">
                 <div class="jcarousel">
                     <ul>
-                        <li><img src="{{ baseUrl(" public/images/napitki.png") }}" alt="Image 0"></li>
-                        <li><img src="{{ baseUrl(" public/images/fruits.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/drinks_n_water.png") }}" alt="Image 2"></li>
-                        <li><img src="{{ baseUrl(" public/images/sugar.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/cold.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/gigiena_sl.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/milk_sl.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/grocery_sl.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/stationary_sl.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/chemistry.png") }}" alt="Image 1"></li>
-                        <li><img src="{{ baseUrl(" public/images/eggs.png") }}" alt="Image 1"></li>
+                        <li><img src="{{ baseUrl('public/images/napitki.png') }}" alt="Напитки"></li>
+                        <li><img src="{{ baseUrl('public/images/fruits.png') }}" alt="Фрукты"></li>
+                        <li><img src="{{ baseUrl('public/images/drinks_n_water.png') }}" alt="Вода"></li>
+                        <li><img src="{{ baseUrl('public/images/sugar.png') }}" alt="Сладости"></li>
+                        <li><img src="{{ baseUrl('public/images/cold.png') }}" alt="Заморозка"></li>
+                        <li><img src="{{ baseUrl('public/images/gigiena_sl.png') }}" alt="Гигиена"></li>
+                        <li><img src="{{ baseUrl('public/images/milk_sl.png') }}" alt="Молочные изделия"></li>
+                        <li><img src="{{ baseUrl('public/images/grocery_sl.png') }}" alt="Бакалея"></li>
+                        <li><img src="{{ baseUrl('public/images/stationary_sl.png') }}" alt="Канцелярия"></li>
+                        <li><img src="{{ baseUrl('public/images/chemistry.png') }}" alt="Химия"></li>
+                        <li><img src="{{ baseUrl('public/images/eggs.png') }}" alt="Яйца и масло"></li>
                     </ul>
                 </div>
 
@@ -25,7 +25,6 @@
                 <p class="jcarousel-pagination"></p>
             </div>
         </div>
-
 
         {#
         <div class="slider">
