--- a/modules/My/view/Base.phtml
+++ b/modules/My/view/Base.phtml
@@ -3,7 +3,8 @@
 <p>Мы рады предложить пилотную версию проекта <strong>Кексик.укр</strong>. </p>
 <p>Оплата продуктов производится через кредитный счет либо наличными. <br>
     Для пополнения кредитного счёта нужно:<br>
-    - пополнить карту Приватбанка <strong>5363-5423-0371-6840</strong> (Чернов Артем Александрович);<br>
+    - пополнить карту Приватбанка <strong> 5168-7423-3562-8933 {#5363-5423-0371-6840#}</strong> (Чернов Артем
+    Александрович);<br>
     - отправить СМС на наш номер, в котором указана сумма и Ваше имя на сайте.<br>
     Имя можно опустить, если в персональных данных Вы сохранили номер Вашего телефона.
 </p>
