--- a/modules/My/view/grid-orders.phtml
+++ b/modules/My/view/grid-orders.phtml
@@ -43,7 +43,7 @@
             {#
             <th width="50px"><a href="{{ grid.order('orders_id', null, 'desc', false) }}">Id заказа</a></th>
             #}
-            <th width="120px"><a href="{{ grid.order('orders_id') }}">Пользователь</a></th>
+            <th width="120px"><a href="{{ grid.order('orders_id') }}">Id заказа</a></th>
             <th width="120px"><a href="{{ grid.order('users_id') }}">Пользователь</a></th>
             <th width="120px"><a href="{{ grid.order('date_added') }}">Дата</a></th>
             <th width="120px"><a href="{{ grid.order('address') }}">Адрес доставки</a></th>
