--- a/modules/Admin/view/grid-orders.phtml
+++ b/modules/Admin/view/grid-orders.phtml
@@ -52,9 +52,9 @@
             <td>{{ row['orders_id'] }} </td>
             <td>{# row['users_id'] #} {{ row['login'] }} ({{ row['email'] }}) <br> {{ row.phone }} {{ row.name }}</td>
             <td>{{ row['date_added']|date("j F G:i ") }}</td>
-            <td>{{ row['address'] }}</td>
+            <td>{{ cropByWords(row['address'],2) }}</td>
             <td>{{ row['total']|round(2) }}</td>
-            <td>{{ row['notes'] }}</td>
+            <td>{{ cropByWords(row['notes'],2) }}</td>
             <td class="controls">
                 <a href="{{ url('admin', 'download_doc', {'orders_id' : row['orders_id'], 'type': 'type_1'}) }}" title="Сгенерировать форму Заказа" data-ajax-method="post" class="print form-1"><i class="fa fa-print"></i></a>
                 <a href="{{ url('admin', 'download_doc', {'orders_id' : row['orders_id'], 'type': 'type_2'}) }}" title="Сгенерировать Маршрутный лист" data-ajax-method="post" class="print form-2"><i class="fa fa-print"></i></a>
